--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "stdbool.h": "c",
         "freertos.h": "c"
-    }
+    },
+    "cmake.configureOnOpen": true
 }
