--- a/platformio.ini
+++ b/platformio.ini
@@ -11,11 +11,13 @@
 [env:lptm4c1294ncpdt]
 platform = titiva
 board = lptm4c1294ncpdt
+; build_type = debug
 board_build.ldscript = src/platformio_linker.ld
 build_flags =
    -mfpu=fpv4-sp-d16 -mfloat-abi=softfp -I /ti/TivaWare_C_Series-2.2.0.295 # update include file paths
    -I /ti/TivaWare_C_Series-2.2.0.295/third_party/FreeRTOS/Source/include 
    -I /ti/TivaWare_C_Series-2.2.0.295/third_party/FreeRTOS/Source/portable/GCC/ARM_CM4F
+   -Ofast
    -Wl,--entry=ResetISR
    -DPART_TM4C1294NCPDT
    -DTARGET_IS_TM4C129_RA2
