Changes to fix accel and lux

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,8 @@
         "stdint.h": "c",
         "semphr.h": "c",
         "array": "c",
-        "string": "c"
+        "string": "c",
+        "opt3001.h": "c"
     },
     "cmake.configureOnOpen": true
 }
